# vector

./: .dockerignore  API.md  CHECKPOINT.md  Cargo.toml  README.md  VECTORIZE_README.md
.cursor/: ARCHITECTURE.md  PLAN.md  UI_UX_PLAN.md
.cursor/agents/: build-runner.md  data-streaming.md  ui-builder.md  vector-expert.md
.cursor/rules/: BACKEND.md  UI.md  browser-automation.mdc  documentation-updates.mdc  use-subagents.mdc
.cursor/skills/vectorize-live-data/: SKILL.md
.cursor/skills/vectorize-project/: SKILL.md
.cursor/skills/vectorize-webui-reload/: SKILL.md
.github/workflows/: deploy.yml
config/: demo.toml
dev/: Dockerfile.agent  README.md  docker-compose.yml  supervisord.conf
dev/configs/production/: vector.toml
dev/configs/staging/: vector.toml
dev/scripts/: start-dev.sh  stop-dev.sh
shared/: Cargo.toml
shared/src/: config.rs  lib.rs  messages.rs
ui/: Cargo.toml  Trunk.toml  index.html  input.css  package-lock.json  tailwind.config.js
ui/src/: app.rs  lib.rs  main.rs
ui/src/client/: direct.rs  mod.rs  subscription.rs  types.rs
ui/src/components/: mod.rs
ui/src/components/common/: header.rs  icons.rs  mod.rs  sidebar.rs  status_bar.rs
ui/src/components/dashboard/: activity_feed.rs  alerts_panel.rs  health_card.rs  mod.rs  quick_actions.rs
ui/src/components/fleet/: agent_detail.rs  agents_list.rs  mod.rs  topology.rs
ui/src/components/layout/: app_shell.rs  bottom_panel.rs  main_tabs.rs  mod.rs  sidebar.rs  status_bar.rs  top_bar.rs
ui/src/components/management/: groups.rs  history.rs  mod.rs
ui/src/components/observe/: alerts.rs  audit.rs  metrics.rs  mod.rs
ui/src/components/pipeline/: canvas.rs  config_panel.rs  data_view.rs  mod.rs  node.rs  palette.rs  view.rs
ui/src/components/settings/: api_keys.rs  git.rs  mod.rs  roles.rs  sso.rs  system.rs  users.rs
ui/src/components/setup/: mod.rs
ui/src/components/tap/: mod.rs
ui/src/state/: mod.rs
vectorize-cli/: Cargo.toml
vectorize-cli/src/: lib.rs  main.rs  server.rs  vector_manager.rs  vector_runtime.rs
vectorize-cli/src/agent/: mod.rs
vectorize-cli/src/alerts/: mod.rs
vectorize-cli/src/api/: agents.rs  alerts.rs  audit.rs  auth.rs  deployments.rs  git.rs  groups.rs  health.rs  mod.rs  roles.rs  tap.rs  users.rs  validation.rs
vectorize-cli/src/cli/: mod.rs
vectorize-cli/src/db/: migrations.rs  mod.rs  models.rs  repository.rs
vectorize-cli/src/deployment/: mod.rs
vectorize-cli/src/git_store/: mod.rs  repository.rs
vectorize-cli/src/health/: mod.rs
vectorize-cli/src/rbac/: mod.rs
vectorize-cli/src/sso/: mod.rs
vectorize-cli/src/tap/: mod.rs
vectorize-cli/src/validation/: functional_test.rs  mod.rs
vectorize-cli/tests/: api_integration.rs
