[workspace]
resolver = "2"
members = [
    "vectorize-cli",
    "shared",
]

# UI is built separately with Trunk for WASM
exclude = ["ui"]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Proprietary"
authors = ["Vectorize Team"]
repository = "https://github.com/pezkins/vectorize"

[workspace.dependencies]
# Shared dependencies across workspace members
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
anyhow = "1.0"
tokio = { version = "1.0", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true

[profile.dev]
opt-level = 0
debug = true
