[package]
name = "vectorize-shared"
version = "0.1.0"
edition = "2021"
description = "Shared types for Vectorize"
license = "Proprietary"

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
thiserror = "1.0"
toml = "0.8"
