[package]
name = "vectorize-ui"
version = "0.1.0"
edition = "2021"

# Opt out of parent workspace
[workspace]

[dependencies]
vectorize-shared = { path = "../shared" }

# Leptos framework
leptos = { version = "0.6", features = ["csr"] }
leptos_router = { version = "0.6", features = ["csr"] }
leptos_meta = { version = "0.6", features = ["csr"] }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Time
chrono = { version = "0.4", features = ["serde"] }

# IDs
uuid = { version = "1.0", features = ["v4", "serde", "js"] }

# WASM bindings
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
web-sys = { version = "0.3", features = [
    "Window",
    "Document",
    "Element",
    "HtmlElement",
    "HtmlInputElement",
    "Event",
    "EventTarget",
    "MouseEvent",
    "DragEvent",
    "DataTransfer",
    "DomRect",
    "WebSocket",
    "MessageEvent",
    "CloseEvent",
    "console",
    "Location",
    "Storage",
    "Navigator",
    "Clipboard",
    "Blob",
    "BlobPropertyBag",
    "Url",
] }
js-sys = "0.3"

# Browser APIs
gloo-net = "0.5"
gloo-timers = "0.3"
gloo-storage = "0.3"

# Async
futures = "0.3"

# Logging
tracing = "0.1"
tracing-wasm = "0.2"

# Error handling  
thiserror = "1.0"
async-trait = "0.1"

[dev-dependencies]
wasm-bindgen-test = "0.3"

[lib]
crate-type = ["cdylib", "rlib"]
