[package]
name = "vectorize"
version = "0.1.0"
edition = "2021"
description = "Visual Pipeline Builder for Vector - A unified observability tool"
license = "MIT OR Apache-2.0"
authors = ["Vectorize Team"]
repository = "https://github.com/pezkins/vector"
default-run = "vectorize"

[[bin]]
name = "vectorize"
path = "src/main.rs"

[dependencies]
# CLI
clap = { version = "4.5", features = ["derive", "env"] }

# Async runtime
tokio = { version = "1.0", features = ["full", "process", "signal"] }

# Web server
axum = { version = "0.7", features = ["ws", "macros"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["cors", "trace", "fs"] }

# Embed UI assets
rust-embed = { version = "8.0", features = ["debug-embed", "mime-guess"] }
mime_guess = "2.0"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Error handling
thiserror = "1.0"
anyhow = "1.0"

# Async utilities
futures = "0.3"

# HTTP client (for proxying to Vector API)
reqwest = { version = "0.12", features = ["json"] }

# Open browser
open = "5.0"
